--- a/Model/html/style3.css
+++ b/Model/html/style3.css
@@ -3,6 +3,11 @@ body{ background-color:#fff; margin:30px 0 0 30px ;}
 
 // div{font-family:Arial;}
 
+table, th, td, tbody{
+border: 0px;
+border-collapse: collapse;
+}
+
 #keyboard{
 //border:1px solid #00CEFF;
 width:1170px;
@@ -13,11 +18,15 @@ height: 460px;
 #keyboard table{padding:35px;border:none;} /*рамка по блокам*/
 #umov{height:80px;} /*совмещение с высотой нумпада*/
 #lrsize{width:55px;}/*разделитель клавиатур*/
-//#lkb {-moz-transform: rotate(15deg); /* Firefox */  }
+//#lkb {width:407px;  }
+/* -moz-transform: rotate(15deg);  Firefox */ 
 //#rkb {padding:-100px; }
+
 /* -moz-transform: rotate(-15deg);  Firefox */ 
 
-.lrkb{width:409px;}
+//.lrkb{width:407px;}
+
+
 
 
 //#numkey {padding-left: 12px;}
@@ -26,10 +35,7 @@ height: 460px;
 .block{
 float:left;
 // margin-left:1px;
-background-color:#E2802A;
-
-
-
+//background-color:#E2802A;
 
 }
 
@@ -51,12 +57,17 @@ float:left;
 .clear{clear:both;}
 /*32 0 26 16 6*/
 .nc1a{width:41px;}
-.nc2a{width:9px;}
+.nc2a{width:11px;}
 .nc3a{width:35px;}
 .nc4a{width:25px;}
-.nc5a{width:17px;}
-/*41 9 35 25 15*/
-
+.nc5a{width:15px;}
+/*41  9 35 25 15*/
+/*41 11 35 25 15*/
+.ncrs{background-color:transparent !important;
+width:31px;
+margin:2px;/*внешний отступ*/
+float:left;
+}
 
 
 /*keys size*/
@@ -148,9 +159,17 @@ text-align:center;
 .con{color:#12FEFE;}
 .koff{background:#FF5565;}
 
-.fspace {margin-left:-30px;}
+.fspace {margin-left:-35px;}
+
+.key_sl {
+font-size:6pt;
+
+}
+
+.key_rctrl div{
+//color:#D3D3D3;
+color:#00FA9A;
 
 
-
-
+}
 
